fix: special character issues in files